openshift-config/API/deploymentConfig.yaml
apiVersion: v1
kind: DeploymentConfig
metadata:
  labels:
    io.kompose.service: api
  name: api
spec:
  replicas: 1
  selector:
    io.kompose.service: api
  strategy:
    resources: {}
    type: Rolling
    rollingParams:
      updatePeriodSeconds: 60
      intervalSeconds: 60
  template:
    metadata:
      creationTimestamp: null
      labels:
        io.kompose.service: api
    spec:
      containers:
      - image: ${DOCKERREG}/${PROJECTNAME}/api:${APIVERSION}
        imagePullPolicy: IfNotPresent
        name: api
        ports:
        - containerPort: 8080
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: ${APICHKURL}
            port: 8080
            scheme: HTTP
          initialDelaySeconds: 60
          periodSeconds: 30
          successThreshold: 1
          timeoutSeconds: 5
        resources:
          resources:
            limits:
              memory: 512Mi
            requests:
              memory: 1024Mi
      restartPolicy: Always
  test: false
  triggers:
  - type: ConfigChange
status: {}
