openshift-config/API/route.yaml
apiVersion: v1
kind: Route
metadata:
  name: api
spec:
  host: PROJECTNAME.${DOMAINNAME}
  path: /api
  port:
    targetPort: '80'
  to:
    kind: Service
    name: api
