openshift-config/API/routefe.yaml
apiVersion: v1
kind: Route
metadata:
  name: api
spec:
  host: ${PROJECTNAME}.${DOMAINNAME}
  port:
    targetPort: '${APIPORT}'
  to:
    kind: Service
    name: api
